--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "watcher"
-version = "0.2.0"
+name = "dir_watcher"
+version = "0.2.1"
 authors = ["Ares <coldswind@pm.me>", "KallenW <coopersjy@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0/MIT"
 repository = "https://github.com/TENX-S/watcher"
 readme = "README.md"
-categories = ["asynchronous"]
+categories = ["filesystem"]
 keywords = ["directory", "sync"]
 
 [dependencies]
