--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,10 @@ keywords = ["directory", "sync"]
 
 [dependencies]
 glob = "0.3.0"
+thiserror = "1.0"
 anyhow = "1.0.36"
 parking_lot = "0.11.1"
+
+[features]
+
+event = []
