--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,12 @@ thiserror = "1.0"
 anyhow = "1.0.36"
 parking_lot = "0.11.1"
 
-[features]
+[dev-dependencies]
+anyhow = "1.0.36"
 
+[build-dependencies]
+anyhow = "1.0.36"
+
+[features]
+default = []
 event = []
